--- a/packages/doc/package.json
+++ b/packages/doc/package.json
@@ -23,7 +23,7 @@
     "gatsby-plugin-react-helmet": "^3.1.8",
     "gatsby-plugin-react-svg": "^2.1.2",
     "gatsby-plugin-sharp": "^2.2.28",
-    "gatsby-plugin-styled-components": "^3.1.6",
+    "gatsby-plugin-styled-components": "^4.13.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-autolink-headers": "^2.1.19",
     "gatsby-remark-copy-linked-files": "^2.1.20",
@@ -41,7 +41,7 @@
     "react-helmet": "^5.2.1",
     "react-inspector": "5.1.1",
     "react-live": "^2.2.0",
-    "styled-components": "^4.4.0"
+    "styled-components": "5.3.1"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.2.0",
