--- a/packages/yoga/package.json
+++ b/packages/yoga/package.json
@@ -50,11 +50,11 @@
     "@testing-library/react": "^9.1.4",
     "@testing-library/react-native": "^4.1.0",
     "babel-plugin-inline-react-svg": "^1.1.1",
-    "styled-components": "^4.4.0"
+    "styled-components": "5.3.1"
   },
   "peerDependencies": {
     "@react-native-picker/picker": "^1.16.6",
     "react": ">=16",
-    "styled-components": "^4.4.0"
+    "styled-components": "5.3.1"
   }
 }
